[package]
name = "actix_tower"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
description = "Modern extensions for Actix Web — Tower compatibility, ergonomic extractors, and production-ready middleware."
license = "Apache-2.0"
repository = "https://github.com/rstosp/actix_tower"
keywords = ["actix", "actix-web", "tower", "middleware", "web"]
categories = ["web-programming::http-server"]

[features]
default = ["tower", "extract", "middleware", "macros", "utils"]
tower = []
extract = []
middleware = ["dep:flate2"]
macros = []
utils = []
full = ["tower", "extract", "middleware", "macros", "utils"]

[dependencies]
# Actix
actix-web = "4"
actix-service = "2"
actix-http = "3"
actix-utils = "3"
actix-multipart = "0.7" # Added for AutoMultipart

# Tower ecosystem
tower = "0.5"
tower-layer = "0.3"
tower-service = "0.3"

# HTTP
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7" # Added for AutoForm/AutoQuery responders

# Async
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "time", "rt"] }

# Utils
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"
indexmap = "2"
pin-project-lite = "0.2"
flate2 = { version = "1.0", optional = true } # Added for Compression middleware

[[bench]]
name = "middleware_bench"
harness = false

[dev-dependencies]
actix-rt = "2"
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "timeout", "auth"] }
tower = { version = "0.5", features = ["limit", "util"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3" # Added for tracing example
criterion = { version = "0.5", features = ["async_tokio"] }